--- a/jupyter_config.json
+++ b/jupyter_config.json
@@ -1,8 +1,8 @@
-{
-    "VoilaConfiguration": {
-        "enable_nbextensions": true,
-        "extension_language_mapping": {
-            ".py": "python",
-        },
-    }
+"scripts": {
+"dev": "react-scripts start",
+"start": "serve -s build",
+"build": "react-scripts build",
+"test": "react-scripts test --env=jsdom",
+"eject": "react-scripts eject",
+"heroku-postbuild": "npm run build"
 }
