--- a/app.yaml
+++ b/app.yaml
@@ -2,4 +2,4 @@ runtime: python
 env: flex
 runtime_config:
   python_version: 3
-entrypoint: voila --port=$PORT --no-browser --enable_nbextensions=True Flexible_Plots.ipynb
+entrypoint: voila --port=$PORT --no-browser --enable_nbextensions=True Flexible_Plots_1.ipynb
